welcome.lessons.welcome.bat.bool1.SleepIn.scala.error
sleepIn:4: error: reassignment to val
	if (weekday=false || vacation=true) {
                   ^